# xmp_property_extension

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: PropertyHandler.rs  dll.rs  lib.rs  properties.rs  property_handler.rs  registry.rs  tests.rs
