[package]
name = "xmp_property_extension"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
simple-logging = "2.0.2"
log = "0.4.22"
windows-core = "0.58"
regex = "1.11.1"
winreg = "0.52.0"

[dependencies.windows]
version = "0.58"
features = [
  "implement",
  "Win32_System_Registry",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_LibraryLoader",
  "Win32_System_SystemServices",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
]

[dependencies.xmp_toolkit]
version = "1.9.1"
features = [
  "crt_static"
]

[build-dependencies]
winresource = "0.1.19"
